# bmi-driver

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: rust.yml
docs/: configuration.md  execution-flow.md  features.md  module-types.md  netcdf-forcing.md
examples/: cat-2863621.ini  cat-2863621.input  mock_bmi.c  mock_config.txt
slurm/: submit.sh
src/: adapter.rs  adapter_c.rs  adapter_fortran.rs  adapter_sloth.rs  aliases.rs  bmi_ffi.rs  config.rs  error.rs  ffi.rs  forcings.rs  forcings_netcdf.rs  lib.rs  library.rs  main.rs  model_info.rs  output_netcdf.rs  resample.rs  runner.rs  traits.rs  units.rs
src/adapters/: bmi_functions.md  c.rs  ffi.rs  fortran.rs  library.rs  mod.rs  python.rs  sloth.rs
src/output/: csv.rs  mod.rs  netcdf.rs  zarr.rs
src/types/: error.rs  traits.rs
src/variables/: aliases.rs  forcings.rs  mod.rs  resample.rs  units.rs
tests/: output_formats.rs
