[package]
name = "bmi-driver"
version = "0.0.0"
edition = "2021"
description = "Basic Model Interface (BMI) driver with support for C and Fortran models."
license = "MIT"
authors = ["Claude","Josh Cu"]
repository = "https://github.com/JoshCu/bmi-driver"
readme = "README.md"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
netcdf = { version = "0.11.1", default-features = false }
rusqlite = "0.37.0"
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0.100"

[[bin]]
name = "bmi-runner"
path = "src/main.rs"
