[package]
name = "bmi-driver"
version = "0.0.2"
edition = "2021"
description = "Basic Model Interface (BMI) driver with support for C Fortran, and Python models."
license = "MIT"
authors = ["Claude","Josh Cu"]
repository = "https://github.com/JoshCu/bmi-driver"
readme = "README.md"

[features]
default = ["fortran", "python"]
fortran = []
python = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.22", features = ["auto-initialize"], optional = true }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
netcdf = { version = "0.11.1", default-features = false }
rusqlite = { version = "0.37.0", features = ["bundled"] }
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0.100"
indicatif = "0.17"
toml = "0.8"
dirs = "5"

[[bin]]
name = "bmi-driver"
path = "src/main.rs"
